...
        }
    }
}

enum class Charts(val label: String, val compose: @Composable (Map<Result, List<Lap>>) -> Unit) {
    LeaderInterval("Leader Interval", { LeaderIntervalChart(it) }),
    Position("Position by lap", { LapPositionChart(it) }),
    Time("Time by lap", { LapTimeChart(it) }),
}

internal fun getLapsWithStart(lapsByResult: Map<Result, List<Lap>>): Map<Result, List<Lap>> =
    lapsByResult
        .mapValues { entry ->
            entry.value
...
