...
    }
}

fun getResultSample(driver: String, position: Int) = Result(
    ResultInfo(
        "11",
        2021,
        2,
        Session.RACE,
        33,
        position,
        "1",
        25.0f,
...
