...
                        modifier = Modifier.clickable {}
                    )
                },
                actions = {
                    IconButton(
                        onClick = onStandingClicked,
                        modifier = Modifier.semantics { testTag = "standing" }
                    ) {
                        Icon(imageVector = Icons.Filled.EmojiEvents, contentDescription = null)
                    }
                },
                scaffoldState = scaffoldState
            )
...
